# ai-safety-concept-kb

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy-site.yml
site/: .gitignore  README.md  home.md  package.json  quartz.config.ts  quartz.config.yaml  quartz.layout.ts  quartz.ts  sync-content.mjs
site/scripts/: setup-plugins.ts  stage-content.mjs
wiki/: home.md  index.md  log.md  overview.md
wiki/concepts/: absolute-power.md  agent-safety.md  agentic-misalignment.md  agentic-planning.md  ai-awareness.md  ai-control.md  ai-development-capability.md  ai-natural-selection.md  ai-race.md  ai-safety-benchmark.md  alignment-auditing.md  alignment-faking.md  alignment.md  aps-systems.md  artificial-conscience.md  auto-induced-distribution-shift.md  automated-ai-rd.md  behavioral-deception.md  behavioral-regularization.md  behavioral-safety.md  benchmark-deployment-gap.md  beyond-episode-goals.md  broadly-scoped-goals.md  calibrated-frequency.md  capabilities-correlation.md  capability-elicitation.md  capability-misgeneralization.md  coherent-extrapolated-volition.md  coherent-misalignment.md  collusion.md  compliance-gap.md  concentration-of-power.md  confabulation.md  construct-validity-safety-evaluation.md  context-dependent-misalignment.md  continuation-interest.md  control-problem.md  corrigibility.md  cot-faithfulness.md  covert-actions.md  (+149 more)
wiki/debates/: alignment-faking-emergence-vs-context.md  behavioral-vs-strategic-spectrum.md  deceptive-alignment-structure-vs-tactic.md  power-seeking-drive-vs-tendency.md  (+3 more)
wiki/entities/: cmu.md  (+190 more)
(+403 files in other folders)
